--- a/CampD/WebContent/static/css/luara.css
+++ b/CampD/WebContent/static/css/luara.css
@@ -7,7 +7,7 @@
 .luara- ul{padding: inherit;margin: 0;}
 .luara- ul li{display: none;padding: inherit;margin: inherit;list-style: none;}
 .luara- ul li:first-child{display:block;}
-.luara- ul li img{width: 1024px;height: inherit;}
+.luara- ul li img{height: inherit;}
 
 
 
