加载更多的按钮的样式调整

--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -120,6 +120,11 @@ a:hover{text-decoration:none;}
 
 .hide{display:none;}
 
+.loadBtn{
+	width: 100%;
+	background-color: #787878;
+}
+
 .positionR{position:relative;z-index:36;}
 
 .header{
