活动提交省市联动，手机测试

--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -702,3 +702,7 @@ a:hover{text-decoration:none;}
 	margin-top:6px;
 	margin-right:17px;
 }
+/*################ add by qrh. Be careful! ##################*/
+#actc{
+	height: 102px;
+}
