--- a/CampD_ADMIN/WebContent/static/js/citySelect/city.css
+++ b/CampD_ADMIN/WebContent/static/js/citySelect/city.css
@@ -117,7 +117,7 @@ i {
 	line-height: 36px;
 	display: inline-block;
 	border: 1px solid #E8E8E8;
-	border-radius: 5px;
+	border-radius: 0px;/*原来是5px，runhua改为了0px*/
 	padding: 0 0 0 8px;
 	cursor: pointer;
 	background: white;
