优化了代码。

--- a/CampD_ADMIN/WebContent/static/js/citySelect/city.css
+++ b/CampD_ADMIN/WebContent/static/js/citySelect/city.css
@@ -45,8 +45,8 @@ i {
 	position: relative;
 	min-height: 38px;
 	/* background-color: green; */
-	float: left;
-	margin-left: -10px;
+	float: none;
+	margin-left: -1px;
 	margin-top: 0px;
 }
 
