--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -795,3 +795,20 @@ a:hover{text-decoration:none;}
     margin: 0 auto;
     padding-top: 10%;
 }
+.tc-modal .share-modal span{
+	bottom:-9px;
+	text-align:center;
+	position:relative;
+	margin-top:-20px;
+	margin-left:-2px;
+	display:block;
+	height:21px;
+	background:#e9e9e9;
+}
+.tc-modal .share-modal img.close{
+	width:20px;
+	height:23px;
+	position:absolute;
+	top:0px;
+	right:0px;
+}
