--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -724,24 +724,32 @@ a:hover{text-decoration:none;}
 	position:absolute;
 	top:0;
 	right:0;
-	width:70%;
+	width:100%;
 	height:100%;
-	background:#fff;
+	background-color:rgba(255,255,255,0.6);
 	z-index:41;
-	opacity:.9;
 	padding-top:60px;
 	font-size:18px;
+	
 }
-.person-right .line{
+/*给head加透明度*/
+.person-right .newperson-right{
+	width:100%;
+	height:230px;
+	margin:0px;
+	padding:0 0 12px 0;
+	background-color:rgba(255,255,255,1);
+}
+.person-right .newperson-right .line{
 	width:100%;
 	height:54.5px;
 	line-height:54.5px;
 	padding-left:18.5px;
 }
-.person-right .line:hover{
+.person-right .newperson-right .line:hover{
 	background:#d7e0e1;
 }
-.person-right .line .left-img{
+.person-right  .newperson-right  .line .left-img{
 	border-radius:180px;
 	margin-top:6px;
 	margin-right:17px;
