报名成功后样式修改

--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -808,7 +808,7 @@ a:hover{text-decoration:none;}
 }
 
 /* 关注我们样式 */
-.tc-modal{
+.newtc-modal{
 	  background:rgba(0,0,0,0.5);
 	  width:100%;
 	  height:100%;
