--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -834,17 +834,10 @@ a:hover{text-decoration:none;}
 	text-align:center;
 	margin-top:15%;
 }
-   /* 场地dl样式修改*/
-dl .newfl{
-	width:30%;
-	margin-right:10%;
-	font-size:16px;
-}
-dl .newfr{
-	width:55%;
-	margin-right:5%;
-	display:inline;
-	font-size:16px;
+   /* 场地交通地址样式修改*/
+ .clearfix .newfr{	
+	margin-right:2%;
+	display:inline;	
 }
 
 
@@ -852,17 +845,22 @@ dl .newfr{
 .error{
 	background:#fff; 
 }
+.pic{
+	position:relative;
+}
 .pic img{
 	width:100%;
 	height:100%;
 	display:block;
 }
 .pic .word{
-	position:relative;
-	margin-top:200px;
-	margin-left:-30px;
-	color:#fff;
-	font-size:34px;
+	 position:absolute;
+	 top: 45%; 
+	 left: 20%;
+     width: 100%; 
+     height: 10%;	
+	 color:#fff;
+	 font-size:34px;
 }
 .pic .word p{
 	margin-left:-30px;
@@ -873,9 +871,10 @@ dl .newfr{
 	margin-bottom:15px;
 }
 .pic .point{
-	position:relative;
-	margin-top:10px;
-	margin-left:250px;
+	position:absolute;
+	top:65%;
+	left:10%;
+	margin-left:5%;
 }
 .pic .point a{
 	color:#fff;
