--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -854,10 +854,14 @@ a:hover{text-decoration:none;}
 
 /*error页面修改*/
 .error{
+	width:100%;
+	height:100%;
 	background:#fff; 
 }
 .pic{
 	position:relative;
+	width:100%;
+	height:100%;
 }
 .pic img{
 	width:100%;
@@ -871,7 +875,7 @@ a:hover{text-decoration:none;}
      width: 100%; 
      height: 10%;	
 	 color:#fff;
-	 font-size:34px;
+	 font-size:24px;
 }
 .pic .word p{
 	margin-left:10px;
@@ -890,7 +894,7 @@ a:hover{text-decoration:none;}
 }
 .pic .point a{
 	color:#fff;
-	font-size:34px;
+	font-size:24px;
 }
 .pic .point .new{
 	width:40px;
