--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -987,6 +987,7 @@ a:hover{text-decoration:none;}
 /*活动详情 timedate dress*/
 .adt-desc .timedate{
 	padding-bottom:5px;
+	margin-top:12px;
 }
 .timedate .time{
 	margin-right:15px;
@@ -999,7 +1000,8 @@ a:hover{text-decoration:none;}
 	border-bottom:1px solid rgba(32,35,37,0.16);
 }
 .adt-desc .dress{
-		
+		margin-top:5px;
+		margin-bottom:8px;
 }
 .dress .address{
 	margin-right:15px;
@@ -1014,7 +1016,7 @@ a:hover{text-decoration:none;}
 	width:100%;
 	height:45px;
 	color:#fff;
-	padding-left:20px;
+	padding-left:15px;
 	line-height:20px;
 	padding-top:15px;
 	font-size:17px;
@@ -1028,7 +1030,7 @@ a:hover{text-decoration:none;}
 	width:100%;
 	height:45px;
 	color:#fff;
-	padding-left:20px;
+	padding-left:15px;
 	line-height:20px;
 	padding-top:15px;
 	font-size:17px;
