--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -94,7 +94,6 @@ a:hover{text-decoration:none;}
 .pdb10{padding-bottom:10px;}
 .pdl10{padding-left:10px;}
 .mat7{margin-top:7px;}
-.mat15{margin-top:25px;}
 .mar5{margin-right:5px;}
 .mar15{margin-right:15px;}
 .pd5{padding:5px!important;}
@@ -848,7 +847,6 @@ a:hover{text-decoration:none;}
  .clearfix .newfl{
  margin-right:10px;
  width:5%;
-
  }
  .clearfix .newfr1{	
 	margin-right:5px;
@@ -861,7 +859,7 @@ a:hover{text-decoration:none;}
 	width:90%;	
 	padding-bottom:10px;
 }
-.adt-desc  dl.mat7{
+.adt-desc    .newmat{
 	margin-top:10px;
 }
 .adt-desc  .fontSize14{
