--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -972,17 +972,12 @@ a:hover{text-decoration:none;}
 	text-align:center;
 	line-height:50px;
 	background:#fff;
-	position:relative;
 }
-  .newindex-nav{
+ .newindex-nav {
 	position:absolute;
 	top:-90px;
 	left:5px;
-    background: rgba(0,0,0,0.5);
-    color: #b8c3c6;
-    font-size: 17px;
-    width: 147px;
-    border-radius: 4px;
+    background: rgba(0,0,0,0.5);color: #b8c3c6;font-size: 17px; width: 147px;border-radius: 4px;
 }
 .newindex-nav ul li {
   padding-left: 5px;
