--- a/CampD/WebContent/static/css/common.css
+++ b/CampD/WebContent/static/css/common.css
@@ -1115,6 +1115,7 @@ a:hover{text-decoration:none;}
     font-size: 17px;
      width: 147px;
      border-radius: 4px;
+     z-index:40;
 }
 .newindex-nav ul li {
   margin-left: 5px;
@@ -1144,6 +1145,11 @@ a:hover{text-decoration:none;}
 	margin-top:6px;
 	margin-right:17px;
 }
+
+
+
+
+
 
 
 
